try to fix overflow

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -290,6 +290,7 @@ a:focus {
 .navbar-fixed-top .container,
 .navbar-fixed-bottom .container {
   width: 940px;
+  overflow-wrap: break-word;
 }
 
 .span12 {
